# river-vandalism-demo

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.redpanda  README.md  docker-compose.yml  pyproject.toml  railway.toml
scripts/: backtest.py  sse_smoke.py
sql/: schema.sql
src/autoresearch/: decider.py  orchestrator.py  proposer.py  runner.py  sandbox.py
src/backtest/: candidates.py  replay.py
src/common/: config.py  features.py  log.py  store.py
src/dashboard/: main.py
src/dashboard/static/: style.css
src/dashboard/templates/: index.html
src/ingest/: main.py
src/ml/: batch.py  liftwing.py  main.py  online.py
